--- a/src/app/modules/home/components/nav/nav.component.html
+++ b/src/app/modules/home/components/nav/nav.component.html
@@ -3,8 +3,12 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#" routerLink="/home"><mat-icon>home</mat-icon>Home</a>
-      <a mat-list-item href="#" routerLink="/lighting"><mat-icon>light_mode</mat-icon>Licht</a>
+      <a mat-list-item href="#" routerLink="/home">
+        <mat-icon>home</mat-icon>Home
+      </a>
+      <a mat-list-item href="#" routerLink="/lightingOverview">
+        <mat-icon>light_mode</mat-icon>Licht
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -16,7 +20,9 @@
       <span>HomeAPI-Frontend</span>
     </mat-toolbar>
 
-    <router-outlet></router-outlet>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
 
   </mat-sidenav-content>
 </mat-sidenav-container>
