--- a/src/app/modules/lighting/components/lighting-overview/lighting-overview.component.html
+++ b/src/app/modules/lighting/components/lighting-overview/lighting-overview.component.html
@@ -1,10 +1,10 @@
-<mat-card class="lightSceneCard">
+<mat-card *ngFor="let lightScene of lightScenes" class="lightSceneCard">
   <mat-card-header>
-    <mat-card-title>Szene 1</mat-card-title>
+    <mat-card-title>{{ lightScene.id }}: {{ lightScene.name }}</mat-card-title>
     <mat-card-subtitle>Beschreibung</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <button mat-button>Laden</button>
+    <button mat-button (click)="loadLightScene(lightScene.id)">Laden</button>
     <button mat-button>Editieren</button>
     <button mat-button>Löschen</button>
   </mat-card-actions>
