--- a/src/app/modules/home/components/nav/nav.component.html
+++ b/src/app/modules/home/components/nav/nav.component.html
@@ -1,12 +1,12 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>Menü</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#" routerLink="/home">
         <mat-icon>home</mat-icon>Home
       </a>
-      <a mat-list-item href="#" routerLink="/lightingOverview">
+      <a mat-list-item href="#" routerLink="/lighting">
         <mat-icon>light_mode</mat-icon>Licht
       </a>
     </mat-nav-list>
