--- a/src/app/modules/home/components/nav/nav.component.html
+++ b/src/app/modules/home/components/nav/nav.component.html
@@ -17,7 +17,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>HomeAPI-Frontend</span>
+      <span>HomeAPI</span>
     </mat-toolbar>
 
     <div class="content">
