add basic site structure for measurement data

--- a/src/app/modules/home/components/nav/nav.component.html
+++ b/src/app/modules/home/components/nav/nav.component.html
@@ -9,6 +9,9 @@
       <a mat-list-item href="#" routerLink="/lighting">
         <mat-icon>light_mode</mat-icon>Licht
       </a>
+      <a mat-list-item href="#" routerLink="/measurements">
+        <mat-icon>thermostat</mat-icon>Temperaturen
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
