add ngx charts; show simple temperature line chart

--- a/src/app/modules/home/components/nav/nav.component.html
+++ b/src/app/modules/home/components/nav/nav.component.html
@@ -10,7 +10,7 @@
         <mat-icon>light_mode</mat-icon>Licht
       </a>
       <a mat-list-item href="#" routerLink="/measurements">
-        <mat-icon>thermostat</mat-icon>Temperaturen
+        <mat-icon>thermostat</mat-icon>Messwerte
       </a>
     </mat-nav-list>
   </mat-sidenav>
