--- a/src/app/modules/measurements/components/measurements-temperatures/measurements-temperatures.component.html
+++ b/src/app/modules/measurements/components/measurements-temperatures/measurements-temperatures.component.html
@@ -1,1 +1,17 @@
-<p>measurements-temperatures works!</p>
+<ngx-charts-line-chart
+  [view]="view"
+  [scheme]="colorScheme"
+  [legend]="true"
+  [legendTitle]="legendTitle"
+  [showXAxisLabel]="true"
+  [showYAxisLabel]="true"
+  [xAxis]="true"
+  [yAxis]="true"
+  [xAxisLabel]="xAxisLabel"
+  [yAxisLabel]="yAxisLabel"
+  [timeline]="true"
+  [results]="chartSeriesSets"
+  [autoScale]="true"
+  [xAxisTickFormatting]="this.dateTickFormatting"
+  >
+</ngx-charts-line-chart>
