--- a/src/app/modules/lighting/lighting.component.html
+++ b/src/app/modules/lighting/lighting.component.html
@@ -1,12 +1,29 @@
 <nav mat-tab-nav-bar>
-  <a mat-tab-link routerLink="overview" routerLinkActive #rlaOverview="routerLinkActive"
-    [active]="rlaOverview.isActive">
+  <a
+    mat-tab-link
+    routerLink="overview"
+    routerLinkActive
+    #rlaOverview="routerLinkActive"
+    [active]="rlaOverview.isActive"
+  >
     Übersicht
   </a>
-  <a mat-tab-link routerLink="scenes" routerLinkActive #rlaScenes="routerLinkActive" [active]="rlaScenes.isActive">
+  <a
+    mat-tab-link
+    routerLink="scenes"
+    routerLinkActive
+    #rlaScenes="routerLinkActive"
+    [active]="rlaScenes.isActive"
+  >
     Szenen
   </a>
-  <a mat-tab-link routerLink="lights" routerLinkActive #rlaLights="routerLinkActive" [active]="rlaLights.isActive">
+  <a
+    mat-tab-link
+    routerLink="lights"
+    routerLinkActive
+    #rlaLights="routerLinkActive"
+    [active]="rlaLights.isActive"
+  >
     Lampen
   </a>
 </nav>
